adding proper abilities for each culinary_artist
gave each culinary_artist the ability to edit or
destroy only their recipe and no one elses

--- a/app/views/culinary_artists/show.html.erb
+++ b/app/views/culinary_artists/show.html.erb
@@ -7,3 +7,10 @@
     <div><%= recipe.title %></div>
 
 <% end %>
+
+<p>Ingredients: </p>
+
+  <% @culinary_artist.ingredients.each do |x| %>
+    <div><%= x.name %></div>
+
+<% end %>
