--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -46,7 +46,7 @@ table#t01 th {
 </table>
 
 <br>
-<% if current_user %>
+<% if !current_user %>
   <%= link_to "Index", recipes_path %> |
   <%= link_to "Log Out", logout_path %> |
   <%= link_to "Something new", new_recipe_path %> |
