updated background image

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,13 +3,12 @@
  @import "bootstrap";
 
  body {
-    background-color: #99C8CF;
     color: #333;
     font-family: Helvetica;
     line-height: 18px;
     margin: 33px;
     padding: 0;
-    background: transparent url("https://images.unsplash.com/photo-1526383426426-c1716158d22a?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=47073ff65a699587798a886d0f7fe1ed&auto=format&fit=crop&w=1350&q=80") no-repeat center;
+    background-image: url("kenny-luo-zi6B_lcbP3o-unsplash.jpg");
     background-size: cover;
     min-height: 100vh;
   }
