updated index images and background

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,7 +3,7 @@
  @import "bootstrap";
 
  body {
-    color: #333;
+    color: rgb(247, 238, 238);
     font-family: Helvetica;
     line-height: 18px;
     margin: 33px;
@@ -31,7 +31,7 @@
  .content {
     float: none;
     border: 3px solid #ccc;
-    background: #eee;
+    background: rgb(155, 188, 219);
     background-repeat: no-repeat;
     background-position: center 0px;
     background-size: contain;
