--- a/app/views/recipe_ingredient/index.html.erb
+++ b/app/views/recipe_ingredient/index.html.erb
@@ -11,10 +11,10 @@ th, td {
   padding: 5px;
 }
 table#t03 tr:nth-child(even) {
-    background-color: #eee;
+    background-color: gray;
 }
 table#t03 tr:nth-child(odd) {
-   background-color: #fff;
+   background-color: darkgray;
 }
 table#t03 th {
     background-color: darkgreen;
