--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -12,10 +12,10 @@ th, td {
   padding: 5px;
 }
 table#t01 tr:nth-child(even) {
-    background-color: #eee;
+    background-color: gray;
 }
 table#t01 tr:nth-child(odd) {
-   background-color: #fff;
+   background-color: darkgray;
 }
 table#t01 th {
     background-color: darkgreen;
